# face-symmetrizer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  cant_ditected  example.py  face-detect-test.ipynb  mkch  mypy.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
face_symmetrizer/: __init__.py  faceSim.py  faceSym.py  main.py
