[metadata]
name = face_symmetrizer
version = attr: face_symmetrizer.__version__
description = Easy symmetrizer for an image contained face(s)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = eggplants
url = https://github.com/eggplants/face-symmetrizer
author_email = w10776e8w@yahoo.co.jp
maintainer = eggplants
maintainer_email = w10776e8w@yahoo.co.jp
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
python_requires = >= 3.8

[options.package_data]
face_symmetrizer = py.typed

[options.extras_require]
dev =
    black>=21.12b0
    flake8>=4.0.1
    isort>=5.10.1
    mypy>=0.931
    types-setuptools>=57.4.7

[options.entry_points]
console_scripts =
    fsym = face_symmetrizer.main:main

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 88
