[metadata]
name = face_symmetrizer
version = attr: face_symmetrizer.__version__
description = Easy symmetrizer for an image contained face(s)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/face-symmetrizer
author = eggplants
author_email = w10776e8w@yahoo.co.jp
maintainer = eggplants
maintainer_email = w10776e8w@yahoo.co.jp
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    Pillow>=9.0.1
    PyQt5>=5.15.6
    face-recognition>=1.3.0
    matplotlib>=3.5.1
    numpy>=1.22.2
    types-Pillow>=9.0.6
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    fsym = face_symmetrizer.main:main

[options.extras_require]
dev =
    black>=21.12b0
    flake8>=4.0.1
    isort>=5.10.1
    mypy>=0.931
    types-setuptools>=57.4.7

[options.package_data]
face_symmetrizer = py.typed

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120
ignore = E203
